--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@ html {
   margin: auto;
 }
 
+.btn {
+  border: 2px solid transparent;
+  text-transform: uppercase;
+  padding: .5rem 3rem;
+  border-radius: 100vh;
+  cursor: pointer;
+  background: transparent;
+}
+
