--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,14 +12,18 @@
     width: 100%;
 }
 /* -- Nav Links -- */
+
+.Navbar .nav-wrapper {
+    width: 100%;
+}
+
 .Navbar .nav-links-container {
     background-color: var(--primary-clr);
-    width: 100%;
     display: flex;
     align-items: center;
-    height: 80px;
-    padding: 0 2rem;
     justify-content: flex-end;
+    height: 65px;
+    padding: 0 2rem;
 }
 
 .Navbar .nav-links {
@@ -35,7 +39,7 @@
     gap: 1.5rem;
     background-color: var(--primary-clr);
     transition: 1s;
-    transform: translateX(100vh);
+    transform: translateX(150vh);
 }
 
 .Navbar .responsive_nav {
@@ -56,13 +60,6 @@
     text-transform: uppercase;
 }
 
-.btn-booking{
-    color: #fff;
-    font-family: var(--header-font) ;
-    font-size: 1.5rem;
-}
-
-
 /* -- Hamburger menu -- */
 .Navbar .btn-container {
     border: none;
@@ -80,30 +77,41 @@
 
 .Navbar .nav-close-btn {
     position: absolute;
-    top: 2rem;
+    top: 1.7rem;
     right: 2rem;
 }
 
 
 @media screen and (min-width: 992px) {
-
+    
+    .emty-div {
+        width: 10%;
+    }
     .Navbar .nav-links {
         align-items: center;
         flex-direction: row;
         position: inherit;
         transform: none;
         transition: none;
-       
+        justify-content: space-between;
+        width: 80%;
+        margin: auto;
     }
+
+    .Navbar .nav-wrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
     .Navbar .nav-links-container {
         justify-content: space-between;
-        height: 80px;
-        padding: 0 2rem;
+        width: 100%;
+        box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.204);
     }
 
     .Navbar .nav-btn {
         visibility: hidden;
         opacity: 0;
     }
-
 }
