fixing dropdown menu

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 .Navbar{
     display: flex;
+    overflow: hidden;
 }
 
 .Navbar .logo-container {
@@ -38,7 +39,7 @@
     flex-direction: column;
     gap: 1.5rem;
     background-color: var(--primary-clr);
-    transition: 1s;
+    transition: 0.99s;
     transform: translateX(150vh);
 }
 
@@ -54,11 +55,55 @@
     cursor: pointer;
 }
 
-.link { 
+.Navbar .link { 
     font-family: var(--header-font) ;
     font-size: 1.5rem;
     text-transform: uppercase;
+    padding: 1rem;
 }
+
+.Navbar .link:hover {
+    color: #000;
+}
+
+/* -- Dropdown -- */
+
+.Navbar .nav-links li {
+    display: block;
+    position: relative;
+}
+.Navbar .dropdown-content li {
+    display: block;
+}
+.Navbar .dropdown-content {
+    /* justify-content: center;
+    align-items: center; */
+    width: 100px;
+    background: var(--primary-clr);
+    box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.204);
+    position: absolute;
+    z-index: 999;
+    /* text-align: center; */
+    padding-block: .5rem;
+    display: none;
+}
+.Navbar .dropdown:hover > .dropdown-content {
+    display: block;
+}
+
+.Navbar .dropdown-link:hover {
+    color: var(--primary-clr);
+    background-color: rgb(0, 0, 0);
+}
+.Navbar .dropdown-link {
+   display: block;
+   color: #fff;
+   padding: .5rem;
+   /* align-items: center;
+   justify-content: center; */
+}
+
+
 
 /* -- Hamburger menu -- */
 .Navbar .btn-container {
