--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,6 +12,7 @@
     background-repeat: no-repeat;
     width: 100%;
 }
+
 /* -- Nav Links -- */
 
 .Navbar .nav-wrapper {
@@ -50,23 +51,28 @@
 .Navbar .nav-links li {
     list-style: none;
 }
-.Navbar .nav-links .link {
-    color: #fff;
-    cursor: pointer;
-}
 
 .Navbar .link { 
     font-family: var(--header-font) ;
     font-size: 1.5rem;
     text-transform: uppercase;
-    padding: 1rem;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: #fff;
+    cursor: pointer;
 }
 
-.Navbar .link:hover {
+.Navbar .home:active {
     color: #000;
 }
 
 /* -- Dropdown -- */
+
+.Navbar .dropdown {
+    width: 100%;
+}
 
 .Navbar .nav-links li {
     display: block;
@@ -75,35 +81,46 @@
 .Navbar .dropdown-content li {
     display: block;
 }
+
 .Navbar .dropdown-content {
-    /* justify-content: center;
-    align-items: center; */
-    width: 100px;
+    width: 180px;
     background: var(--primary-clr);
+    background: #000;
     box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.204);
     position: absolute;
     z-index: 999;
-    /* text-align: center; */
     padding-block: .5rem;
     display: none;
 }
-.Navbar .dropdown:hover > .dropdown-content {
-    display: block;
-}
+
 
 .Navbar .dropdown-link:hover {
     color: var(--primary-clr);
     background-color: rgb(0, 0, 0);
 }
+
 .Navbar .dropdown-link {
    display: block;
    color: #fff;
    padding: .5rem;
-   /* align-items: center;
-   justify-content: center; */
 }
 
+.Navbar .showDropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 10rem;
+    flex-direction: column;
+    align-items: center;
+    background: var(--primary-clr);
+    padding-block: .5rem;
+    text-align: center;
+}
 
+.Navbar .linkActive {
+    color: #000;
+}
 
 /* -- Hamburger menu -- */
 .Navbar .btn-container {
@@ -129,6 +146,12 @@
 
 @media screen and (min-width: 992px) {
     
+    .Navbar .logo-container {
+        background-color: #000;
+        width: 20rem;
+        height: 100vh; /* -- KOM IHÅG ATT ÄNDRA FRÅN VH --*/
+    }
+
     .emty-div {
         width: 10%;
     }
@@ -141,6 +164,15 @@
         justify-content: space-between;
         width: 80%;
         margin: auto;
+    }
+    .Navbar .link {
+        display: block;
+        justify-content: inherit;
+        align-items: inherit;
+        padding-right: 2rem;
+    }
+    .Navbar .dropdown {
+        width: auto;
     }
 
     .Navbar .nav-wrapper {
@@ -158,5 +190,13 @@
     .Navbar .nav-btn {
         visibility: hidden;
         opacity: 0;
+    }
+
+    .Navbar .dropdown:hover > .dropdown-content {
+        display: block;
+    } 
+
+    .Navbar .showDropdown {
+        display: none;
     }
 }
