--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,27 +2,21 @@
     display: flex;
 }
 
-/* ---- */
-
-.Navbar .logo-container {
-    background-color: #000;
-    width: 10rem;
-    height: 10%;
-    cursor: pointer;
-    z-index: 900;
-    position: fixed;
-}
 .Navbar .logo {
     background-repeat: no-repeat;
     width: 100%;
 }
+.Navbar .logo-container {
+    width: 20rem;
+    height: 10rem;
+    position: absolute;
+    z-index: 1000;
+    display: none;
+}
 
-@media screen and (min-width: 992px) {
-    
+/* --- */
+@media screen and (min-width: 1160px) {
     .Navbar .logo-container {
-        width: 20rem;
-        height: 10rem;
-        position: absolute;
-        z-index: 1000;
+        display: block;
     }
 }
