--- a/src/Components/SmallNavbar/SmallNavbar.css
+++ b/src/Components/SmallNavbar/SmallNavbar.css
@@ -6,6 +6,26 @@
     z-index: 100;
 }
 
+.SmallNavbar .indexHigh {
+    z-index: 10;
+}
+
+/* -- LOGO --- */
+.SmallNavbar .logo {
+    background-repeat: no-repeat;
+    width: 100%;
+}
+.SmallNavbar .logo-container {
+    background-color: #000;
+    width: 10rem;
+    height: 10%;
+    cursor: pointer;
+    z-index: 900;
+    position: fixed;
+}
+
+/* -- LOGO END -- */
+
 .SmallNavbar .nav-links-container {
     background-color: var(--primary-clr);
     display: flex;
@@ -29,6 +49,7 @@
     background-color: var(--primary-clr);
     transition: 0.99s;
     transform: translateX(150vh);
+    z-index: 1000;
 }
 
 .SmallNavbar .responsive_nav {
@@ -89,6 +110,7 @@
    display: block;
    color: #fff;
    padding: .5rem;
+   text-transform: uppercase;
 }
 
 .SmallNavbar .showDropdown {
@@ -197,4 +219,20 @@
     .SmallNavbar .showDropdown {
         display: none;
     }
+
+}
+
+
+@media screen and (min-width: 1160px) {
+    
+    .SmallNavbar .logo-container {
+        /* background-color: #000;
+        width: 10rem;
+        height: 10%;
+        cursor: pointer;
+        z-index: 900;
+        position: fixed; */
+        display: none;
+    }
+
 }
