--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 html, body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-y: hidden;
 }
 
 .App {
